...

    <string name="fav_match">Favorite Match</string>
    <string name="fav_team">Favorite Team</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

...
