...
    <Spinner
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_team"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

...
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_team"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
...
